crates/fontina-core/tests/snapshots/fixtures__nabla.snap
---
source: crates/fontina-core/tests/fixtures.rs
expression: snapshot_view(f)
---
{
  "capabilities": {
    "bitmap_strikes": false,
    "color": [
      "colrv1",
      "svg"
    ],
    "hinting": true,
    "kern_table": false,
    "math": false,
    "outlines": "glyf"
  },
  "codepoints": 376,
  "container": "ttf",
  "designer": "Arthur Reinders Folmer",
  "embedding": {
    "bitmap_only": false,
    "level": "installable",
    "no_subsetting": false
  },
  "family": "Nabla",
  "features": {
    "gpos": [
      "kern"
    ],
    "gsub": [
      "ccmp"
    ],
    "scripts": [
      {
        "languages": [],
        "tag": "DFLT"
      }
    ]
  },
  "freedom": "free",
  "glyph_count": 3655,
  "index": 0,
  "license": "OFL-1.1",
  "postscript_name": "Nabla-Regular",
  "scripts": [
    {
      "codepoints": 257,
      "script": "Latn"
    },
    {
      "codepoints": 104,
      "script": "Zyyy"
    },
    {
      "codepoints": 15,
      "script": "Zinh"
    }
  ],
  "style": {
    "css": {
      "family": "Nabla",
      "format": "truetype",
      "stretch": "100%",
      "style": "normal",
      "weight": "400"
    },
    "slope": {
      "kind": "normal"
    },
    "weight": 400.0,
    "width": 100.0
  },
  "subfamily": "Regular",
  "units_per_em": 1000,
  "variable": {
    "axes": [
      {
        "default": 100.0,
        "hidden": false,
        "max": 200.0,
        "min": 0.0,
        "name": "Extrusion Depth",
        "tag": "EDPT"
      },
      {
        "default": 12.0,
        "hidden": false,
        "max": 24.0,
        "min": 0.0,
        "name": "Edge Highlight",
        "tag": "EHLT"
      }
    ],
    "has_avar": false,
    "has_stat": true,
    "instances": [
      {
        "coordinates": [
          100.0,
          12.0
        ],
        "name": "Regular",
        "postscript_name": "Nabla-Regular"
      }
    ]
  }
}
